--- a/oop/oop.vcxproj
+++ b/oop/oop.vcxproj
@@ -144,6 +144,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="targil.1-2.cpp" />
+    <ClCompile Include="targil.3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="headers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
