--- a/oop/oop.vcxproj.filters
+++ b/oop/oop.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="targil.1-2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="targil.3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="headers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
