--- a/oop/oop.vcxproj
+++ b/oop/oop.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="targil.1-2.cpp" />
     <ClCompile Include="targil.3.cpp" />
+    <ClCompile Include="targil.4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers.h" />
