--- a/oop/oop.vcxproj
+++ b/oop/oop.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="hagasha.1.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="targil.1-2.cpp" />
     <ClCompile Include="targil.3.cpp" />
