--- a/oop/oop.vcxproj
+++ b/oop/oop.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="hagasha.1.cpp" />
+    <ClCompile Include="hagasha.2.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="targil.1-2.cpp" />
     <ClCompile Include="targil.3.cpp" />
