--- a/oop/oop.vcxproj.filters
+++ b/oop/oop.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="hagasha.2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers.h">
