--- a/oop/oop.vcxproj
+++ b/oop/oop.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="hagasha.1.cpp" />
     <ClCompile Include="hagasha.2.cpp" />
     <ClCompile Include="hagasha.3.cpp" />
+    <ClCompile Include="hagasha.4.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="targil.1-2.cpp" />
     <ClCompile Include="targil.3.cpp" />
